cbits/Bullet.h

void* btAxisSweep3Internal_unsignedint__getOverlappingPairCache1(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache const * ( ::btAxisSweep3Internal<unsigned int>::* )(  ) const
void btAxisSweep3Internal_unsignedint__unQuantize(void *c,void* p0,float* p1,float* p2); //method: unQuantize void ( ::btAxisSweep3Internal<unsigned int>::* )( ::btBroadphaseProxy *,::btVector3 &,::btVector3 & ) const
void btAxisSweep3Internal_unsignedint__sortMinDown(void *c,int p0,unsigned int p1,void* p2,int p3); //method: sortMinDown void ( ::btAxisSweep3Internal<unsigned int>::* )( int,unsigned int,::btDispatcher *,bool ) 
void btAxisSweep3Internal_unsignedint__aabbTest(void *c,float* p0,float* p1,void* p2); //method: aabbTest void ( ::btAxisSweep3Internal<unsigned int>::* )( ::btVector3 const &,::btVector3 const &,::btBroadphaseAabbCallback & ) 
void btAxisSweep3Internal_unsignedint__getBroadphaseAabb(void *c,float* p0,float* p1); //method: getBroadphaseAabb void ( ::btAxisSweep3Internal<unsigned int>::* )( ::btVector3 &,::btVector3 & ) const
void btAxisSweep3Internal_unsignedint__destroyProxy(void *c,void* p0,void* p1); //method: destroyProxy void ( ::btAxisSweep3Internal<unsigned int>::* )( ::btBroadphaseProxy *,::btDispatcher * ) 
//not supported method: getHandle ::btAxisSweep3Internal<unsigned int>::Handle * ( ::btAxisSweep3Internal<unsigned int>::* )( unsigned int ) const
// error: unsigned int - ok,  - unsupported

void btAxisSweep3Internal_unsignedint__m_bpHandleMask_set(void *c,unsigned int a); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_bpHandleMask
unsigned int btAxisSweep3Internal_unsignedint__m_bpHandleMask_get(void *c); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_bpHandleMask
void btAxisSweep3Internal_unsignedint__m_handleSentinel_set(void *c,unsigned int a); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_handleSentinel
unsigned int btAxisSweep3Internal_unsignedint__m_handleSentinel_get(void *c); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_handleSentinel
void btAxisSweep3Internal_unsignedint__m_worldAabbMin_set(void *c,float* a); //attribute: ::btVector3 btAxisSweep3Internal_unsignedint_->m_worldAabbMin
void btAxisSweep3Internal_unsignedint__m_worldAabbMin_get(void *c,float* a);
void btAxisSweep3Internal_unsignedint__m_worldAabbMax_set(void *c,float* a); //attribute: ::btVector3 btAxisSweep3Internal_unsignedint_->m_worldAabbMax
void btAxisSweep3Internal_unsignedint__m_worldAabbMax_get(void *c,float* a);
void btAxisSweep3Internal_unsignedint__m_quantize_set(void *c,float* a); //attribute: ::btVector3 btAxisSweep3Internal_unsignedint_->m_quantize
void btAxisSweep3Internal_unsignedint__m_quantize_get(void *c,float* a);
void btAxisSweep3Internal_unsignedint__m_numHandles_set(void *c,unsigned int a); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_numHandles
unsigned int btAxisSweep3Internal_unsignedint__m_numHandles_get(void *c); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_numHandles
void btAxisSweep3Internal_unsignedint__m_maxHandles_set(void *c,unsigned int a); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_maxHandles
unsigned int btAxisSweep3Internal_unsignedint__m_maxHandles_get(void *c); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_maxHandles
// attribute not supported: //attribute: ::btAxisSweep3Internal<unsigned int>::Handle * btAxisSweep3Internal_unsignedint_->m_pHandles
void btAxisSweep3Internal_unsignedint__m_firstFreeHandle_set(void *c,unsigned int a); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_firstFreeHandle
unsigned int btAxisSweep3Internal_unsignedint__m_firstFreeHandle_get(void *c); //attribute: unsigned int btAxisSweep3Internal_unsignedint_->m_firstFreeHandle
// attribute not supported: //attribute: ::btAxisSweep3Internal<unsigned int>::Edge *[3] btAxisSweep3Internal_unsignedint_->m_pEdges
// attribute not supported: //attribute: void *[3] btAxisSweep3Internal_unsignedint_->m_pEdgesRawPtr
void btAxisSweep3Internal_unsignedint__m_pairCache_set(void *c,void* a); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedint_->m_pairCache