Physics/Bullet/Raw/BulletCollision/BroadphaseCollision.chs

{#fun btAxisSweep3Internal_unsignedint__getOverlappingPairCache1 as btAxisSweep3Internal_unsignedint__getOverlappingPairCache1    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__unQuantize as btAxisSweep3Internal_unsignedint__unQuantize    `( BtAxisSweep3Internal_unsignedint_Class bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__unQuantize as btAxisSweep3Internal_unsignedint__unQuantize'    `( BtAxisSweep3Internal_unsignedint_Class bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#807>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__sortMinDown as btAxisSweep3Internal_unsignedint__sortMinDown    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ axis
,  `Word32'  -- ^ edge
, withBt* `p2'  -- ^ arg2
,  `Bool'  -- ^ updateOverlaps
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#291>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__aabbTest as btAxisSweep3Internal_unsignedint__aabbTest    `( BtAxisSweep3Internal_unsignedint_Class bc , BtBroadphaseAabbCallbackClass p2 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p2'  -- ^ callback
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#291>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__aabbTest as btAxisSweep3Internal_unsignedint__aabbTest'    `( BtAxisSweep3Internal_unsignedint_Class bc , BtBroadphaseAabbCallbackClass p2 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p2'  -- ^ callback
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#182>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__getBroadphaseAabb as btAxisSweep3Internal_unsignedint__getBroadphaseAabb    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#182>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__getBroadphaseAabb as btAxisSweep3Internal_unsignedint__getBroadphaseAabb'    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#249>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__destroyProxy as btAxisSweep3Internal_unsignedint__destroyProxy    `( BtAxisSweep3Internal_unsignedint_Class bc , BtBroadphaseProxyClass p0 , BtDispatcherClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, withBt* `p1'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_bpHandleMask_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Word32'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_bpHandleMask_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_handleSentinel_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Word32'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_handleSentinel_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#74>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_worldAabbMin_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#74>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_worldAabbMin_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#75>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_worldAabbMax_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#75>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_worldAabbMax_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#77>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_quantize_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#77>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_quantize_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_numHandles_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Word32'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_numHandles_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_maxHandles_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Word32'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_maxHandles_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#83>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_firstFreeHandle_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Word32'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#83>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_firstFreeHandle_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#88>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_pairCache_set    `( BtAxisSweep3Internal_unsignedint_Class bc , BtOverlappingPairCacheClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
